<resources>
    <string name="app_name">闹钟</string>
    <string name="action_bar_title">闹钟</string>
    <string name="create_alarm_clock">创建闹钟</string>
    <string name="edit_clock_title">编辑闹钟</string>
    <string name="edit_clock_repeat">重复</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="sure">确定</string>
    <string name="sure_to_delete">要删除这个闹钟吗？</string>
    <string name="no_clock">还没有闹铃哦~</string>

    <string name="day1">周一</string>
    <string name="day2">周二</string>
    <string name="day3">周三</string>
    <string name="day4">周四</string>
    <string name="day5">周五</string>
    <string name="day6">周六</string>
    <string name="day7">周日</string>
    <string name="most_10">\t最多只能设置10个闹钟哦~ \n请先删除其它闹钟再创建闹钟</string>
    <string name="ok">好的</string>
    <string name="stop">停止</string>
    <string name="text_clock">闹钟</string>
    <string name="flag">:</string>

</resources>