<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="403dp"
    android:layout_height="340dp"
    android:orientation="vertical"
    android:background="@drawable/item_shape"
    >
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_clock_repeat"
        android:textColor="@color/action_bar_title_text_color"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/day1"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day1"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="28dp"
            android:textColor="@color/color_2"/>
        <Button
            android:id="@+id/day2"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day2"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="25dp"
            android:textColor="@color/color_2"/>
        <Button
            android:id="@+id/day3"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day3"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="25dp"
            android:textColor="@color/color_2"/>
        <Button
            android:id="@+id/day4"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day4"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="25dp"
            android:textColor="@color/color_2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/day5"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day5"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="28dp"
            android:textColor="@color/color_2"/>
        <Button
            android:id="@+id/day6"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day6"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="25dp"
            android:textColor="@color/color_2"/>
        <Button
            android:id="@+id/day7"
            android:layout_width="86dp"
            android:layout_height="38dp"
            android:text="@string/day7"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/repeat_button_background_2"
            android:layout_marginStart="25dp"
            android:textColor="@color/color_2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/day_sure"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/complete_button"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>