<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xiangling"
    tools:context=".WarningActivity">

    <TextView
        android:id="@+id/layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_clock"
        android:textColor="@color/action_bar_title_text_color"
        android:textSize="@dimen/text_size_24" />

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_below="@id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ClockHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08"
                android:textColor="@color/color_6"
                android:textSize="@dimen/warning_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/flag"
                android:textColor="@color/color_6"
                android:textSize="@dimen/warning_size" />

            <TextView
                android:id="@+id/ClockMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08"
                android:textColor="@color/color_6"
                android:textSize="@dimen/warning_size" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/layout_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="9月27日 星期二"
        android:textColor="@color/color_5"
        android:textSize="14sp" />

    <Button
        android:layout_marginBottom="27dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/stop"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/stop_button"
        android:gravity="center"
        android:text="@string/stop"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>